<?xml version="1.0"?>
<package>
  <name>px_comm</name>
  <version>0.1.0</version>
  <description>The px_comm package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/px_comm</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
