<?xml version="1.0"?>
<package>
  <name>mavlink_serial_client</name>
  <version>0.1.0</version>
  <description>The mavlink_serial_client package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/mavlink_serial_client</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>px_comm</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>px_comm</run_depend>
</package>
