<?xml version="1.0"?>
<package>
  <name>px4flow</name>
  <version>0.1.0</version>
  <description>The px4flow package</description>

  <maintainer email="hengli@inf.ethz.ch">Lionel Heng</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/px4flow</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>px_comm</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>px_comm</run_depend>
</package>
